force-app/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__customer_Number__c.field-meta.xml
<CustomField>
    <fullName>tspa__customer_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>