force-app/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__Recording_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>tspa__Recording_Start_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recording Start Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>