force-app/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__session_End_Time__c.field-meta.xml
<CustomField>
    <fullName>tspa__session_End_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>session End Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>