force-app/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__URL__c.field-meta.xml
<CustomField>
    <fullName>tspa__URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>